add endps participant by initiative
